<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/switchDay"
        android:text="@string/choose_a_day"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:padding="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchDay"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTwoDaysAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_days_ago"/>
    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:padding="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"/>

    <TextView
        android:id="@+id/switchSubtitle"
        android:text="@string/switch_theme"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchSubtitle">

        <RadioButton
            android:id="@+id/grayThemeRadioButton"
            android:text="@string/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/blueThemeRadioButton"
            android:text="@string/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/purpleThemeRadioButton"
            android:text="@string/purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/orangeThemeRadioButton"
            android:text="@string/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:padding="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeRadioGroup"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_app"
        app:layout_constraintTop_toBottomOf="@id/line2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toRecyclerViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/to_recycle_view"
        app:layout_constraintTop_toBottomOf="@id/aboutAppButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>